--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,3 @@
 <main>
-  <app-flashcard front="What is Angular?" back="A TypeScript-based web framework"></app-flashcard>
+  <router-outlet></router-outlet>
 </main>
