--- a/src/app/components/flashcard/flashcard.html
+++ b/src/app/components/flashcard/flashcard.html
@@ -1,10 +1,10 @@
 <div class="flashcard" [class.flipped]="flipped" (click)="toggle()" role="button" aria-pressed="{{flipped}}">
   <div class="card">
     <div class="face front">
-      <div class="content">{{ front }}</div>
+      <div class="content">{{ card.front }}</div>
     </div>
     <div class="face back">
-      <div class="content">{{ back }}</div>
+      <div class="content">{{ card.back }}</div>
     </div>
   </div>
 </div>
