--- a/src/app/pages/learn-deck/study-deck.html
+++ b/src/app/pages/learn-deck/study-deck.html
@@ -1,1 +1,3 @@
-<app-flashcard [card]="flashcards[0]"></app-flashcard>
+<div class="study-deck-container">
+  <app-flashcard [card]="flashcards[0]"></app-flashcard>
+</div>
