--- a/src/app/pages/learn-deck/study-deck.scss
+++ b/src/app/pages/learn-deck/study-deck.scss
@@ -24,5 +24,10 @@
     border: none;
     border-radius: 5px;
     color: var(--alt-text-color);
+
+    &:disabled {
+      background-color: var(--secondary-color);
+      cursor: not-allowed;
+    }
   }
 }
