--- a/src/app/components/flashcard/flashcard.scss
+++ b/src/app/components/flashcard/flashcard.scss
@@ -33,6 +33,10 @@
     .content {
       padding: 1rem;
       text-align: center;
+      word-wrap: break-word;
+      overflow: auto;
+      font-size: 2rem;
+      line-height: 1.2;
     }
   }
   .front {
