--- a/src/app/pages/deck-list/deck-list.html
+++ b/src/app/pages/deck-list/deck-list.html
@@ -22,6 +22,7 @@
         <div class="deck-actions">
           <a [routerLink]="['/study', deck.id]" class="btn study">Study</a>
           <a [routerLink]="['/edit', deck.id]" class="btn edit">Edit</a>
+          <a (click)="deleteDeck(deck.id)" class="btn delete">Delete</a>
         </div>
       </li>
     }
