--- a/src/app/pages/deck-list/deck-list.scss
+++ b/src/app/pages/deck-list/deck-list.scss
@@ -96,6 +96,7 @@
     font-size: 1rem;
     transition: background-color 0.2s ease;
     border: none;
+    cursor: pointer;
 
     &:hover {
       background-color: var(--alt-primary-color);
