--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <main>
-  <button (click)="toggleTheme()">Toggle Theme</button>
+  <app-top-bar></app-top-bar>
   <router-outlet></router-outlet>
 </main>
