--- a/src/app/pages/study-deck/study-deck.scss
+++ b/src/app/pages/study-deck/study-deck.scss
@@ -1,8 +1,13 @@
+:host {
+  flex: 1;
+  display: flex;
+}
+
 .study-deck-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  flex: 1;
   flex-direction: column;
   gap: 20px;
 }
