login buttons WIP

--- a/src/app/components/login-buttons/login-buttons.html
+++ b/src/app/components/login-buttons/login-buttons.html
@@ -1,1 +1,9 @@
-<p>login-buttons works!</p>
+<div class="container">
+  @if (user) {
+    <!-- todo -->
+  }
+  @else {
+    <button class="btn btn-primary">Login</button>
+    <button class="btn btn-secondary">Register</button>
+  }
+</div>
