--- a/src/app/components/theme-select/theme-select.html
+++ b/src/app/components/theme-select/theme-select.html
@@ -1,7 +1,7 @@
 <label class="theme-select">
   <span class="theme-select-label">Theme:</span>
   <select
-    class="theme-select-dropdown"
+    class="theme-select-dropdown input"
     [ngModel]="selectedTheme"
     (ngModelChange)="onThemeChange($event)"
   >
