--- a/src/app/components/login-buttons/login-buttons.html
+++ b/src/app/components/login-buttons/login-buttons.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="login-container">
   @if (user) {
     <!-- todo -->
   }
   @else {
-    <button class="btn btn-primary">Login</button>
+    <button class="btn btn-secondary">Login</button>
     <button class="btn btn-secondary">Register</button>
   }
 </div>
