--- a/src/app/components/top-bar/top-bar.html
+++ b/src/app/components/top-bar/top-bar.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="topbar-container">
   <div class="options">
     <app-theme-select> </app-theme-select>
     <div class="links">
