--- a/src/app/pages/deck-list/deck-list.html
+++ b/src/app/pages/deck-list/deck-list.html
@@ -1,7 +1,7 @@
 <div class="deck-list-container">
   <h1>Flashcard Decks</h1>
   <div class="new-deck-container">
-    <button (click)="toggleNewDeckForm()" class="btn new-deck">+ New Deck</button>
+    <button (click)="toggleNewDeckForm()" class="btn btn-primary new-deck">+ New Deck</button>
   </div>
   @if (showNewDeckForm) {
     <div class="new-deck-form">
@@ -9,22 +9,22 @@
         type="text"
         [(ngModel)]="newDeckName"
         placeholder="Enter deck name"
-        class="new-deck-input"
+        class="new-deck-input input"
       />
-      <button (click)="addNewDeck()" class="btn" [disabled]="addingDeck">Add</button>
+      <button (click)="addNewDeck()" class="btn btn-primary" [disabled]="addingDeck">Add</button>
     </div>
   }
 
   <ul class="deck-list">
     @for (deck of decks; track deck.id) {
-      <li class="deck-item">
+      <li class="deck-item card-container">
         <div class="deck-info">
           <h2>{{deck.name}}</h2>
         </div>
         <div class="deck-actions">
-          <a [routerLink]="['/study', deck.id]" class="btn study">Study</a>
-          <a [routerLink]="['/edit', deck.id]" class="btn edit">Edit</a>
-          <a (click)="deleteDeck(deck.id)" class="btn delete">Delete</a>
+          <a [routerLink]="['/study', deck.id]" class="btn btn-primary">Study</a>
+          <a [routerLink]="['/edit', deck.id]" class="btn btn-secondary">Edit</a>
+          <a (click)="deleteDeck(deck.id)" class="btn btn-danger">Delete</a>
         </div>
       </li>
     }
