--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -14,13 +14,13 @@
 }
 
 [data-theme="dark"] {
-  --primary-color: #0d6efd;
+  --primary-color: #3399ff;
   --alt-primary-color: #084298;
   --secondary-color: #adb5bd;
   --alt-secondary-color: #6c757d;
   --background-color: #1a1a1a;
   --text-color: #f8f9fa;
-  --alt-text-color: #111111;
+  --alt-text-color: #000000;
   --card-front-color: #2b2b2b; /* Dark gray for flashcard front */
   --card-back-color: #333333; /* Slightly darker gray for flashcard back */
   --card-shadow-color: rgba(0, 0, 0, 0.7); /* Stronger shadow for depth */
