--- a/src/app/components/login-buttons/login-buttons.html
+++ b/src/app/components/login-buttons/login-buttons.html
@@ -3,7 +3,9 @@
     <!-- todo -->
   }
   @else {
-    <button class="btn btn-secondary">Login</button>
-    <button class="btn btn-secondary">Register</button>
+    <div class="buttons-container">
+      <button class="btn btn-secondary">Login</button>
+      <button class="btn btn-secondary">Register</button>
+    </div>
   }
 </div>
