--- a/src/app/pages/edit-deck/edit-deck.html
+++ b/src/app/pages/edit-deck/edit-deck.html
@@ -14,7 +14,7 @@
       </label>
 
       <div class="actions">
-        <button (click)="saveDeck()" [disabled]="saving" class="btn btn-primary">Save Deck</button>
+        <button (click)="saveDeck()" [disabled]="saving" class="btn btn-primary">Save Settings</button>
         <button (click)="navigateBack()" class="btn btn-secondary">Back</button>
       </div>
     </div>
