--- a/src/app/components/theme-select/theme-select.scss
+++ b/src/app/components/theme-select/theme-select.scss
@@ -1,16 +1,29 @@
 .theme-select {
   display: flex;
-  align-items: center;
-  gap: 0.5rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
   color: var(--alt-text-color);
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 0.9rem;
+  }
 
   .theme-select-label{
     font-weight: 500;
   }
 
   .theme-select-dropdown {
-    padding: 0.25rem 0.5rem;
-    font-size: 0.9rem;
+    padding: 0.2rem 0.4rem;
+    font-size: 0.75rem;
+
+    @media (min-width: 768px) {
+      padding: 0.25rem 0.5rem;
+      font-size: 0.9rem;
+    }
   }
 }
