--- a/src/app/components/top-bar/top-bar.scss
+++ b/src/app/components/top-bar/top-bar.scss
@@ -1,9 +1,13 @@
 .topbar-container {
   display: flex;
   justify-content: center;
-  padding: 0.2rem 1rem;
+  padding: 0.25rem 0.5rem;
   background-color: var(--primary-color);
   color: var(--alt-text-color);
+
+  @media (min-width: 768px) {
+    padding: 0.5rem 1rem;
+  }
 }
 
 .options {
@@ -13,6 +17,10 @@
   width: 100%;
   max-width: 1200px;
   gap: 1rem;
+
+  @media (max-width: 768px) {
+    gap: 0.5rem;
+  }
 }
 
 .links {
@@ -20,6 +28,10 @@
   justify-content: center;
   gap: 1rem;
   flex: 1;
+
+  @media (max-width: 768px) {
+    gap: 0.25rem;
+  }
 }
 
 .option {
@@ -27,6 +39,11 @@
   text-decoration: none;
   font-weight: 500;
   padding: 0.25rem 0.5rem;
+  font-size: 0.85rem;
+
+  @media (min-width: 768px) {
+    font-size: 1rem;
+  }
 }
 
 .option:hover {
