login/register pages

--- a/src/app/components/login-buttons/login-buttons.html
+++ b/src/app/components/login-buttons/login-buttons.html
@@ -4,8 +4,8 @@
   }
   @else {
     <div class="buttons-container">
-      <button class="btn btn-secondary">Login</button>
-      <button class="btn btn-secondary">Register</button>
+      <button class="btn btn-secondary" [routerLink]="['/login']">Login</button>
+      <button class="btn btn-secondary" [routerLink]="['/register']">Register</button>
     </div>
   }
 </div>
