--- a/src/app/components/login-buttons/login-buttons.html
+++ b/src/app/components/login-buttons/login-buttons.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   @if (user) {
-    <!-- todo -->
+    <button class="btn btn-secondary" (click)="logout()">Logout</button>
   }
   @else {
     <div class="buttons-container">
