--- a/src/app/pages/public-decks/public-decks.html
+++ b/src/app/pages/public-decks/public-decks.html
@@ -9,6 +9,7 @@
 				</div>
 			<div class="deck-actions">
 				<a [routerLink]="['/study', deck.id]" class="btn btn-primary">Study</a>
+				<a [routerLink]="['/quiz', deck.id]" class="btn btn-primary">Quiz</a>
 				<button type="button" class="btn btn-secondary" (click)="copyDeck(deck)" *ngIf="user">Copy</button>
 			</div>
 			</li>
