deck settings fix

--- a/src/app/pages/edit-deck/edit-deck.html
+++ b/src/app/pages/edit-deck/edit-deck.html
@@ -10,7 +10,7 @@
 
       <label>
         Public:
-        <input type="checkbox" [(ngModel)]="deck.public" (change)="togglePublic()" />
+        <input type="checkbox" [(ngModel)]="deck.public" />
       </label>
 
       <div class="actions">
