--- a/src/app/pages/deck-list/deck-list.html
+++ b/src/app/pages/deck-list/deck-list.html
@@ -13,6 +13,9 @@
       />
       <button (click)="addNewDeck()" class="btn btn-primary" [disabled]="addingDeck">Add</button>
     </div>
+    @if (errorMessage) {
+      <div class="error-message">{{ errorMessage }}</div>
+    }
   }
 
   <ul class="deck-list">
